# Clunky

./: Cargo.toml  LICENSE_MIT.txt  README.md  build.rs  gltf_to_load.rs  meshes_to_load.rs
clunky/: Cargo.toml  build.rs  gltf_to_load.rs
clunky/examples/: dungeon.rs  islands.rs
clunky/examples/dungeon/: gltf.rs  main.rs
clunky/examples/dungeon/rooms/: test.blend  (+1 more)
clunky/examples/rain_of_bounce/: body.rs  common_renderer.rs  creature_types.rs  engine.rs  gltf.rs  main.rs  menus.rs  plan.odt  renderer.rs  world.blend  world.blend1  world.glb
clunky/old examples/: README  islands.rs
clunky/old examples/dungeon/: gltf.rs
clunky/src/: Text.xcf  buffer_contents.rs  fnaf_map.xcf  lib.rs  lost_code.rs  math.rs  menu_rendering.rs  menus.rs  meshes.rs  physics.rs  random_generation.rs  rendering.rs  shaders.rs  sprite_sheet.pxo  test_out.rs
clunky/src/map_shaders/: vertex_shader.glsl
clunky/src/menus/: example_1.rs  example_3d.rs  image_example.rs  islands.rs
clunky/src/meshes/: auto_generated_cube.glb  cube.glb  experimental_cube.glb  fnaf_scene.blend1  fnaf_scene.glb  ico_sphere.glb  island_test.blend  island_test_scene.blend  island_test_scene.blend1  island_test_scene.glb  test_scene.rs
clunky/src/physics/: physics_3d.rs
clunky/src/random_generation/: wave_function_collapse.rs
clunky/src/shaders/: colour_3d_instanced_shaders.rs  instanced_simple_lit_colour_3d.rs  instanced_simple_lit_uv_3d.rs  instanced_text_sdf.rs  instanced_unlit_uv_2d_stretch.rs  naming scheme  simple_lit_colour_3d.rs
clunky/src/ui_shaders/: fragment_shader.frag  vertex_shader.glsl
(+89 files in other folders)
