[package]
name = "vulkan_fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gltf = "1.4.0"
noise = "0.8.2"
png = "0.17.10"
rand = "0.8.5"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
vulkano-win = "0.34.0"
winit = "0.28.6"
